<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dolby.io Stream Monitor</string>

    <!-- Streaming Screen -->
    <string name="streaming_screen_contentDescription">Streaming Screen</string>
    <string name="live_label">Live</string>
    <string name="offline_label">Offline</string>
    <string name="stream_offline_title_label">Stream is offline</string>
    <string name="stream_offline_subtitle_label">Please wait for livestream to begin.</string>
    <string name="stream_network_disconnected_label">Disconnected from the network</string>

    <!-- Simulcast Screen -->
    <string name="simulcastScreen_contentDescription">Simulcast Screen</string>
    <string name="simulcast_title">Simulcast</string>
    <string name="simulcast_auto">Auto</string>
    <string name="simulcast_high">High</string>
    <string name="simulcast_medium">Medium</string>
    <string name="simulcast_low">Low</string>

    <!-- Stream Detail Input Screen -->
    <string name="stream_detail_screen_name">Stream Detail Input Screen</string>
    <string name="stream_detail_header">Dolby.io Remote Monitor</string>
    <string name="stream_detail_title">View stream</string>
    <string name="stream_detail_subtitle">Enter your stream name and publisher\naccount ID to view a stream.</string>
    <string name="stream_name_placeholder">Enter your stream name</string>
    <string name="account_id_placeholder">Enter your account ID</string>
    <string name="env">Select env</string>
    <string name="play_button">Play</string>
    <string name="demo_stream_title">Demo a stream</string>
    <string name="remote_config_url">Config URL (https)</string>
    <string name="play_config_button">Play from Config</string>
    <string name="play_amino_button">Play Amino Config</string>
    <string name="saved_streams_button">Saved Streams</string>
    <string name="clear_stream_history_button">Clear stream history</string>
    <string name="missing_stream_name_or_account_id">Please enter a Stream name and Account ID</string>
    <string name="missing_stream_detail_dismiss_button">OK</string>
    <string name="settings_title">Settings</string>
    <string name="delete_all_streams_dialog_label">Are you sure you want to clear the saved streams?</string>
    <string name="delete_all_streams_clear_button">Clear</string>
    <string name="delete_all_streams_cancel_button">Cancel</string>
    <string name="remote_config_fetch_error">Invalid URL or config</string>

    <!-- Saved Streams Screen -->
    <string name="saved_streams_screen_title">Saved streams</string>
    <string name="saved_streams_section_header_lastPlayed">Last played</string>
    <string name="saved_streams_section_header_all">All</string>

    <string name="streaming_statistics_title">Streaming statistics</string>
    <string name="live_indicator_title">Live indicator</string>
    <string name="streamingToolbar_contentDescription">Streaming Toolbar</string>
    <string name="settingsScreen_contentDescription">Settings Screen</string>
    <string name="statisticsScreen_contentDescription">Statistics Screen</string>
    <string name="liveIndicator_contentDescription">Status Indicator</string>

    <string name="statisticsScreen_title">Streaming statistics</string>
    <string name="statisticsScreen_name">Name</string>
    <string name="statisticsScreen_value">Value</string>
    <string name="statisticsScreen_no_data">No data</string>

    <string name="statisticsScreen_rtt">RTT</string>
    <string name="statisticsScreen_videoResolution">Video Resolution</string>
    <string name="statisticsScreen_fps">FPS</string>
    <string name="statisticsScreen_outgoingBitrate">Outgoing Bitrate</string>
    <string name="statisticsScreen_targetBitrate">Target Bitrate</string>
    <string name="statisticsScreen_videoBitrate">Video Bitrate</string>
    <string name="statisticsScreen_audioBitrate">Audio Bitrate</string>
    <string name="statisticsScreen_videoTotal">Video Total Received</string>
    <string name="statisticsScreen_audioTotal">Audio Total Received</string>
    <string name="statisticsScreen_videoLoss">Video Packet Loss</string>
    <string name="statisticsScreen_audioLoss">Audio Packet Loss</string>
    <string name="statisticsScreen_videoJitter">Video Jitter</string>
    <string name="statisticsScreen_audioJitter">Audio Jitter</string>
    <string name="statisticsScreen_codecs">Codecs</string>
    <string name="statisticsScreen_timestamp">Timestamp</string>

</resources>
